...
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableRow style="@style/home.row.bottom">

        <!--Library-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_library"
            style="@style/home.card.box.left"
            auto:body_subtitle="@string/library_card_desc"
            auto:body_title="@string/library_card_label"
            auto:header_icon="@drawable/ic_home_library"
            auto:header_background="@color/dashboard_item_bg" />

...
            auto:body_title="@string/settings_card_label"
            auto:header_icon="@drawable/ic_home_config"
            auto:header_background="@color/config_item_bg" />

        <!--Servers-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_servers"
            style="@style/home.card.box"
            auto:body_subtitle="@string/servers_card_desc"
            auto:body_title="@string/servers_card_label"
            auto:header_icon="@drawable/ic_home_servers"
            auto:header_background="@color/config_item_bg" />

...
