...
    <string name="spm_delete_btn">Delete</string>
    <string name="spm_cancel_btn">Cancel</string>


    <!-- Server Profile Activity -->
    <string name="sp_bc_add_profile">New Server Profile</string>
    <string name="sp_bc_edit_profile">Edit Server Profile</string>
    <string name="sp_name_label">Name:</string>
    <string name="sp_name_hint">my server name</string>
    <string name="sp_url_label">Server URL:</string>
    <string name="sp_url_hint">http://myserver.com</string>
    <string name="sp_org_label">Organization:</string>
    <string name="sp_organization_hint">organization id</string>
...
    <string name="sp_username_hint">my user name</string>
    <string name="sp_password_label">Password:</string>
    <string name="sp_password_hint">my password</string>
    <string name="sp_ask_password_text">always ask for password</string>
    <string name="sp_save_btn">Save</string>
    <!-- Error messages -->
    <string name="sp_error_field_required">This field is required.</string>
    <string name="sp_error_url_not_valid">URL is not valid.</string>


    <!-- Repository Activity -->
    <string name="r_browser_nothing_to_display">There are no resources in this folder.</string>
    <string name="r_search_nothing_to_display">No results from search.</string>
...
